# Multilevel_Gerrymandering

./: pyproject.toml
NY_experiment_files/: NY_gerry_exps.py  NY_neutral_exps.py  README.md
NY_experiment_files/NY_dual_graphs/connected_dual_graphs_with_initial_partitions/: conn_tracts_dual_graph_init_parts.json
syn_experiment_files/: README.md  add_init_parts_to_neutral_blocks.py  block_builder_gerry.py  syn_exps_cli.py  syn_file_GG.py  syn_file_GGopp.py  syn_file_GN.py  syn_file_NG.py  syn_file_NN.py
syn_experiment_files/run_with_cluster/: add_init_parts_to_blocks_cluster.sh  run_syn_exps_cluster.sh
syn_experiment_files/run_without_cluster/: add_init_parts_to_blocks.sh  run_syn_exps.sh
